# Logger

./: .gitignore  LICENSE  mkdocs.yml
cpp/: CMakeLists.txt
cpp/cmake/: LoggerConfig.cmake.in
cpp/include/: logger.h
cpp/src/: CMakeLists.txt  logger.cpp
cpp/tests/: CMakeLists.txt  test_logger.cpp
docs/: cpp-api.md  getting-started.md  index.md  python-api.md
python/: README.md  pyproject.toml
python/examples/: demo.py
python/src/logger/: __init__.py  logger.py
python/tests/: test_logger.py
