add_library(logger STATIC
  ${CMAKE_CURRENT_LIST_DIR}/logger.cpp
)

target_include_directories(logger PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)
target_link_libraries(logger PRIVATE Threads::Threads)

install(TARGETS logger
    EXPORT LoggerTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/../include/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)